--- a/front_end/assets/css/framework.scss
+++ b/front_end/assets/css/framework.scss
@@ -1,3 +1,4 @@
+@import "reset";
 //the variables
 $width: 100%;
 $col-size: $width / 12;
@@ -86,15 +87,63 @@ $col-size: $width / 12;
 
 // navbar
 nav {
+  .nav-link-2 {
+    font-family: "Titillium Web", sans-serif;
+    font-size: medium;
+    padding: 20px;
+    color: white;
+    text-decoration: none;
+  }
   .nav-link {
     font-family: "Titillium Web", sans-serif;
     font-size: medium;
     padding: 10px;
+    color: white;
+    text-decoration: none;
+    &:hover {
+      font-weight: bolder;
+    }
   }
 }
 
 //Heading
 .heading {
-  font-size: medium;
+  font-size: -webkit-xxx-large;
   font-family: "Titillium Web", sans-serif;
+  color: white;
+}
+
+//button
+.btn {
+  &.btn-green {
+    background-color: #5cac72;
+    border-radius: 24px;
+    height: 40px;
+    color: white;
+    border-color: transparent;
+    &:hover {
+      background-color: transparent;
+      height: 40px;
+      font-weight: bolder;
+      color: white;
+      transition-duration: 1s;
+    }
+  }
+  &.btn-light {
+    background-color: transparent;
+    height: 40px;
+    font-weight: bolder;
+    border-color: transparent;
+
+    color: white;
+    &:hover {
+      background-color: #5cac72;
+      border-radius: 24px;
+      height: 40px;
+      color: white;
+      border-color: transparent;
+      transition-duration: 1s;
+      border: 1px;
+    }
+  }
 }
