began work on the dashboard

--- a/front_end/assets/css/main.css
+++ b/front_end/assets/css/main.css
@@ -20,3 +20,13 @@ body {
   margin: 20px 0px 60px;
   color: #7582b9;
 }
+
+/*Dashboard NavBar*/
+.dashboard {
+  height: 60px;
+  background-color: #223e9c;
+}
+
+.dashboard .nav-link {
+  padding: 20px;
+}
