--- a/front_end/assets/css/framework.scss
+++ b/front_end/assets/css/framework.scss
@@ -90,7 +90,7 @@ nav {
   .nav-link-2 {
     font-family: "Titillium Web", sans-serif;
     font-size: medium;
-    padding: 20px;
+    margin: 20px;
     color: white;
     text-decoration: none;
   }
