--- a/front_end/assets/css/framework.css
+++ b/front_end/assets/css/framework.css
@@ -492,6 +492,25 @@ nav .nav-link:hover {
           transition-duration: 1s;
 }
 
+.btn.btn-green2 {
+  background-color: #5cac72;
+  border-radius: 24px;
+  height: 40px;
+  color: white;
+  border-color: transparent;
+}
+
+.btn.btn-green2:hover {
+  background-color: transparent;
+  height: 40px;
+  font-weight: bolder;
+  color: black;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  border-color: black;
+  border-radius: 0px;
+}
+
 .btn.btn-light {
   background-color: transparent;
   height: 40px;
