--- a/front_end/assets/css/framework.scss
+++ b/front_end/assets/css/framework.scss
@@ -134,6 +134,22 @@ nav {
       transition-duration: 1s;
     }
   }
+  &.btn-green2 {
+    background-color: #5cac72;
+    border-radius: 24px;
+    height: 40px;
+    color: white;
+    border-color: transparent;
+    &:hover {
+      background-color: transparent;
+      height: 40px;
+      font-weight: bolder;
+      color: black;
+      transition-duration: 1s;
+      border-color: black;
+      border-radius: 0px;
+    }
+  }
   &.btn-light {
     background-color: transparent;
     height: 40px;
