--- a/front_end/assets/css/framework.scss
+++ b/front_end/assets/css/framework.scss
@@ -93,14 +93,14 @@ $col-size: $width / 12;
 // navbar
 nav {
   .nav-link-2 {
-    font-family: "Titillium Web", sans-serif;
+    font-family: "Century Gothic";
     font-size: medium;
     margin: 20px;
     color: white;
     text-decoration: none;
   }
   .nav-link {
-    font-family: "Titillium Web", sans-serif;
+    font-family: "Century Gothic";
     font-size: medium;
     padding: 10px;
     color: white;
@@ -114,7 +114,7 @@ nav {
 //Heading
 .heading {
   font-size: -webkit-xxx-large;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Century Gothic";
   color: white;
 }
 
